项目初始化

--- a/transfer-api/service-transfer-openapi-core/src/main/resources/i18n/exception.properties
+++ b/transfer-api/service-transfer-openapi-core/src/main/resources/i18n/exception.properties
@@ -1,6 +1,7 @@
 #-------------------------
 #	\u9519\u8bef\u4fe1\u606f\u914d\u7f6e\u6587\u4ef6
 #-------------------------
+https_method=jiuwu.user.login,jiuwu.user.register,jiuwu.user.setpw.update,jiuwu.user.updatepw.update,jiuwu.daboo.user.login1,jiuwu.user.daboo.register,jiuwu.user.daboo.setpw.update,jiuwu.user.daboo.updatepw.update,
 
 jiuwu.visit.error.min_pre_visit_over=\u6bcf\u5206\u949f\u7684\u8bbf\u95ee\u9891\u7387\u8d85\u8fc7{0}
 jiuwu.system.sdk.request_method_not_found=sdk\u8c03\u7528\u65b9\u6cd5\u4fe1\u606f\u672a\u627e\u5230
